@@ -1,5 +1,11 @@
 2010-06-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Removed unused member variable uuid and uuidGen
+	* src/Command.cc
+	* src/Command.h
+
+2010-06-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Renamed member variables
 	* src/ByteArrayDiskWriter.cc
 	* src/ByteArrayDiskWriter.h
